fix: layout issue

--- a/src/style.css
+++ b/src/style.css
@@ -27,9 +27,6 @@ body {
   padding: 0;
 }
 
-.container {
-  height: calc(100dvh - 200px);
-}
 
 /* scroll bar */
 .cubic-scroll{
